@@ -103,12 +103,13 @@ class ChannelPane(SoftwarePane):
         # garbage collected
         old_model = self.app_view.get_model()
         
-        # if the list is expected to contain many items, clear the current model to display
-        # an empty list while the full list is generated; this prevents a visual glitch when
+        # if the list is expected to contain many items, 
+        #  clear the current model to display
+        # an empty list while the full list is generated; 
+        #  this prevents a visual glitch when
         # the list is replaced
-        if ((self.channel.get_channel_name() == self.distro.get_distro_channel_name() and
-             self.channel.get_channel_component() != "partner") and
-             not self.search_terms):
+        if ((self.channel.get_channel_name() == self.distro.get_distro_channel_name() and not 
+             self.search_terms)):
             self.app_view.clear_model()
         
         if old_model is not None:
