@@ -13,6 +13,8 @@ software-center (2.1.5) UNRELEASED; urgency=low
     for the oneconf integration)
   * merged lp:~osomon/software-center/close_in_progress
     that fixes LP:#431907, thanks to Olivier Tilloy 
+  * remove specal cases for partner now that soyuz 
+    LP: #552560 is fixed (LP: #604693)
   
   [ Gary Lasker ]
   * data/icons/scalable/apps/category-show-all.svg,
